# FileManager-Actions
# A file-manager extension which offers configurable context menu actions.
#
# Copyright (C) 2005 The GNOME Foundation
# Copyright (C) 2006-2008 Frederic Ruaudel and others (see AUTHORS)
# Copyright (C) 2009-2015 Pierre Wieser and others (see AUTHORS)
#
# FileManager-Actions is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License as
# published by the Free Software Foundation; either version 2 of
# the License, or (at your option) any later version.
#
# FileManager-Actions is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with FileManager-Actions; see the file COPYING. If not, see
# <http://www.gnu.org/licenses/>.
#
# Authors:
#   Frederic Ruaudel <grumz@grumz.net>
#   Rodrigo Moya <rodrigo@gnome-db.org>
#   Pierre Wieser <pwieser@trychlos.org>
#   ... and many others (see AUTHORS)

api_includedir = $(pkgincludedir)

api_include_HEADERS = \
	fma-extension.h										\
	\
	fma-dbus.h											\
	fma-iexporter.h										\
	fma-iimporter.h										\
	fma-ifactory-provider.h								\
	fma-ifactory-provider-provider.h					\
	fma-iio-provider.h									\
	\
	fma-boxed.h											\
	fma-core-utils.h									\
	fma-data-boxed.h									\
	fma-data-def.h										\
	fma-data-types.h									\
	fma-gconf-monitor.h									\
	fma-gconf-utils.h									\
	fma-icontext.h										\
	fma-iduplicable.h									\
	fma-ifactory-object.h								\
	fma-ifactory-object-data.h							\
	fma-object-api.h									\
	fma-object.h										\
	fma-object-id.h										\
	fma-object-item.h									\
	fma-object-action.h									\
	fma-object-profile.h								\
	fma-object-menu.h									\
	fma-timeout.h										\
	$(NULL)
